--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -166,9 +166,16 @@
     <Compile Include="Migrations\201902051118272_StudentValidation.Designer.cs">
       <DependentUpon>201902051118272_StudentValidation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902051249206_ComplexDataModel.cs" />
+    <Compile Include="Migrations\201902051249206_ComplexDataModel.Designer.cs">
+      <DependentUpon>201902051249206_ComplexDataModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Instructor.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Enrolment.cs" />
+    <Compile Include="Models\OfficeAssignment.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\EnrolmentDateGroup.cs" />
@@ -247,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902051118272_StudentValidation.resx">
       <DependentUpon>201902051118272_StudentValidation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902051249206_ComplexDataModel.resx">
+      <DependentUpon>201902051249206_ComplexDataModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
