--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AssignedCourseData.cs" />
     <Compile Include="ViewModels\CreateCourseViewModel.cs" />
+    <Compile Include="ViewModels\CreateInstructorViewModel.cs" />
     <Compile Include="ViewModels\EditCourseViewModel.cs" />
     <Compile Include="ViewModels\EditInstructorViewModel.cs" />
     <Compile Include="ViewModels\EnrolmentDateGroup.cs" />
