--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -187,8 +187,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AssignedCourseData.cs" />
     <Compile Include="ViewModels\CreateCourseViewModel.cs" />
+    <Compile Include="ViewModels\CreateDepartmentViewModel.cs" />
     <Compile Include="ViewModels\CreateInstructorViewModel.cs" />
     <Compile Include="ViewModels\EditCourseViewModel.cs" />
+    <Compile Include="ViewModels\EditDepartmentViewModel.cs" />
     <Compile Include="ViewModels\EditInstructorViewModel.cs" />
     <Compile Include="ViewModels\EnrolmentDateGroup.cs" />
     <Compile Include="ViewModels\CreateStudentViewModel.cs" />
