- add optimistic concurrency [RowVersion] to Department Entity - add migrations - update Department/Edit Controller and View

--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -177,6 +177,10 @@
     <Compile Include="Migrations\201902110933132_DepartmentSP.Designer.cs">
       <DependentUpon>201902110933132_DepartmentSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902111042545_RowVersion_Department.cs" />
+    <Compile Include="Migrations\201902111042545_RowVersion_Department.Designer.cs">
+      <DependentUpon>201902111042545_RowVersion_Department.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Instructor.cs" />
@@ -290,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902110933132_DepartmentSP.resx">
       <DependentUpon>201902110933132_DepartmentSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902111042545_RowVersion_Department.resx">
+      <DependentUpon>201902111042545_RowVersion_Department.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
